# AdvPI

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
2d_centroids/: centroids.pkl
3d_centroids/: centroids.pkl
experiments/: 1_vlm.sh  2_method.sh  3_transfer.sh  4_3d_archive.sh  ablation.sh
modules/: __init__.py
modules/attack/: __init__.py  attack.py  evaluator.py  util.py
modules/dataset/: rsna.py
modules/evaluator/: __init__.py  base.py  retrieval.py  zero_shot.py
modules/losses/: __init__.py  contrastive.py  supervised.py
modules/models/: biomedclip.py  entrep.py  factory.py  medclip.py
modules/trainer/: __init__.py  vlm_trainer.py
modules/utils/: constants.py  helpers.py
openelm/: configs.py  elm.py
openelm/algorithms/: genetic.py  map_elites.py
openelm/dataset_model/: coco_b32.py  coco_l14.py  entrep.py  entrep_class.py  mimic.py  mimic_class.py
openelm/environments/: attack_utils.py  base.py  descriptors.py  vlmattack_retrieval_2d.py  vlmattack_retrieval_3d.py
openelm/utils/: __init__.py  utils.py
